

- remember last used search phrase in Find window (#1909847)
- fixed text entry using AltGr on many European keyboards


Version 1.4
-----------

- wxWidgets >= 2.8 is now required when compiling from sources
- don't show comments windows by default to avoid confusion
- OS X: fixed conflict with 10.5's Spaces - Command-arrows can now be used
  to navigate in the list control in addition to Ctrl-arrows
- Windows, OS X: significantly faster updating of catalogs on multi-core
  machines (on Linux, some distributions included multi-threaded gettext,
  some don't)
- fixed remaining problems with list selection
- use more standard way of differentiating between different kinds of
  entries in the list (translated, fuzzy, new) by using font variants
  instead of different background colors (#1863332)
- don't update PO-Revision-Date header if it's unused (#1900298)
- Windows: common shortcuts like Ctrl-A or Ctrl-backspace now work
- added Belarusian latin translation (Alaksandar Navicki)


Version 1.3.9
-------------

- OS X: fixed corruption of first entry when opening catalog from manager


Version 1.3.8
-------------

- OS X: fixed startup on computers that didn't have Poedit installed before
- fixed translation status color indicator to work correctly in case
  of plural entries
- changed the official spelling from "poEdit" to "Poedit"
- preserve old msgid records (#| msgid "...") when saving
- preserve deleted records when updating catalogs
- preserve msgctxt entries in catalogs (#1680554)
- OS X: Sparkle is now used for automatic updates
- OS X: fixed spell checker to use catalog's language
- fixed View->Display quotes setting broken in 1.3.7
- Windows: fixed crash when catalog update removes translations
- added more translations:
     Irish (Seanán Ó Coistín)


Version 1.3.7
-------------

- Windows: Windows 95/98 is no longer supported by the official binary
- OS X: Poedit is now built as Universal binary
- fixed the Preferences menu entry in catalogs manager