@@ -2,6 +2,7 @@
 
 - remember last used search phrase in Find window (#1909847)
 - fixed text entry using AltGr on many European keyboards
+- fixed HTML export to properly escape the text (#1739062)
 
 
 Version 1.4
